# BEP-CoR-2024

./: PERACT_BC.yaml  README.md  config.yaml  eval.yaml  execute_trained_model  franka_controller_server  keyboard_controller  record_demo  resize_images  test_config.yaml
cfgs/: peract_agent.yaml  peract_demo.yaml
dvnets_franka_msgs/: CMakeLists.txt  package.xml
dvnets_franka_msgs/srv/: GotoPose.srv  Home.srv  SetGripper.srv
easy_handeye/easy_handeye/launch/: calibrationmanager.launch  publishmanager.launch  rviz_easy_handeye.config  setup.launch
easy_handeye/easy_handeye/scripts/: aruco.py
voxel/: augmentation.py  saving_point_clouds
