<?xml version="1.0"?>
<package>
  <name>dvnets_franka_msgs</name>
  <version>1.0.0</version>
  <description>DVNets Franka Msgs</description>

  <maintainer email="mshr@cs.washington.edu">
    Mohit Shridhar
  </maintainer>
  <license>Apache 2.0</license>
  <!-- <url type="website"></url> -->

  <author email="mshr@cs.washington.edu"> Mohit Shridhar </author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>

</package>
